--- a/One_Page_Website/css/styles.css
+++ b/One_Page_Website/css/styles.css
@@ -3,6 +3,8 @@ html, body{
     background-color: beige;
     padding: 1%;
     color: rgb(5, 14, 60);
+    font-family: Arial, sans-serif;
+    font-size: medium;
 }
 
 .whole_body{
@@ -57,6 +59,9 @@ h1{
     text-align: center;
 }
 
+h2{
+    text-align: center;
+}
 .move{
     margin-bottom: 50px;
 }
@@ -98,7 +103,7 @@ label input {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-sizing: border-box; /* Ensures padding doesn't affect width */
+    box-sizing: border-box;
 }
 
 input[type="submit"]
