--- a/stylesheet/portfolio.css
+++ b/stylesheet/portfolio.css
@@ -31,7 +31,10 @@ p {
 /* Center class - this applies to all elements with the class "center" */
 .center {
     text-align: center; /* This center aligns the text */
+   
 }
+
+.center a{ text-decoration: none;}
 
 /* Anchor elements */
 a {
@@ -204,7 +207,7 @@ footer {
 
 /* This class is applied to the columns in the final row, overriding the height and padding to provide more room for the contact form  while keeping the rest of the formatting from Column_1 or Column_2 */
 .Column_tall {
-    padding-top: 3.5%;
+    padding-top: 2.5%;
     height: 450px;
 }
 
